# irisml-tasks-automl

./: README.md  setup.cfg
.github/workflows/: python-package.yml
irisml_tasks_automl/: __init__.py
irisml_tasks_automl/common/: __init__.py  base_config.py  cost_estimator.py  train_log.py
irisml_tasks_automl/controllers/: __init__.py  search_controller.py  search_pruners.py
test/: test_dict_config.py  test_search_controllers.py  test_search_pruner.py
