[metadata]
name = irisml-tasks-automl
version = 0.0.0
url = https://github.com/microsoft/irisml-tasks-automl
description = IrisML tasks for hyperparams tuning
long_description = file: README.md
long_description_content_type = text/markdown
author = irisdev
license = MIT

[options]
packages = find_namespace:
python_requires = >= 3.8


[flake8]
max-line-length = 200